--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Statistics Solver</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="firstOption">Mean, Median, Mode, Range...</string>
+    <string name="buttonError">Could not determine button. Please restart the app. If problem persists, please contact developer.</string>
 
 </resources>
