--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Statistics Solver</string>
     <string name="action_settings">Settings</string>
     <string name="buttonError">Could not determine button. Please restart the app. If problem persists, please contact developer.</string>
-    <string name="basicInputHint">Hit next after each number.</string>
+    <string name="basicInputHint">Comma separated values</string>
     <string name="sizeHeader">Size:</string>
     <string name="sumHeader">Sum:</string>
     <string name="meanHeader">Mean:</string>
@@ -15,5 +15,20 @@
     <string name="variancePopHeader">Variance (Pop.):</string>
     <string name="stdDevSampleHeader">Std. Deviation (Sample):</string>
     <string name="stdDevPopHeader">Std. Deviation (Pop.):</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="backspace">Bkspc</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="period">.</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="minus">-</string>
+    <string name="zero">0</string>
+    <string name="comma">,</string>
+    <string name="done">Done</string>
 
 </resources>
