Rearranges keyboard layout to include 'x'. Allows input of 'x' by changing constants file. Fixes bug on toast when bad input is parsed.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="zero">0</string>
     <string name="comma">,</string>
     <string name="done">Done</string>
+    <string name="times">x</string>
 
 </resources>
