--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Stats Calculator</string>
-    <string name="action_settings">Settings</string>
+    <string name="save_list">Save List</string>
     <string name="buttonError">Could not determine button. Please restart the app. If problem persists, please contact developer.</string>
     <string name="basicInputHint">Comma separated values</string>
     <string name="sizeHeader">Size:</string>
