--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="n_perm_r">nPr</string>
     <string name="n_comb_r">nCr</string>
     <string name="indistinct_perm">Indistinguishable Permutations</string>
+    <string name="request_list_name">What would you like to name the list?</string>
 
 </resources>
