Reference guide now accessible from basic stats page. Images are still defaults.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="cancel">Cancel</string>
     <string name="load">Load</string>
     <string name="delete">Delete</string>
+    <string name="formula">formula</string>
+    <string name="reference_guide">Reference Guide</string>
 
 </resources>
