--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="delete">Delete</string>
     <string name="formula">formula</string>
     <string name="reference_guide">Reference Guide</string>
+    <string name="descriptive_stats">Descriptive Stats</string>
+    <string name="permutations_combinations">Permutations &amp; Combinations</string>
 
 </resources>
