--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="save_list">Save List</string>
     <string name="load_or_delete_list">Load/Delete List</string>
     <string name="buttonError">Could not determine button. Please restart the app. If problem persists, please contact developer.</string>
-    <string name="basicInputHint">Comma separated values</string>
+    <string name="basicInputHint">eg: 59.4x2,61.34,60x3,65.9</string>
     <string name="sizeHeader">Size:</string>
     <string name="sumHeader">Sum:</string>
     <string name="meanHeader">Mean:</string>
@@ -19,7 +19,6 @@
     <string name="one">1</string>
     <string name="two">2</string>
     <string name="three">3</string>
-    <string name="backspace">Bkspc</string>
     <string name="four">4</string>
     <string name="five">5</string>
     <string name="six">6</string>
