More styling for permutations / combinations screen.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,11 +33,11 @@
     <string name="pc_default_value">n/a</string>
     <string name="pc_n">n =</string>
     <string name="pc_r">r =</string>
-    <string name="pc_ns">n1,n2,n3,n4,...=</string>
+    <string name="pc_ns">n1,n2,n3,... =</string>
     <string name="n_fact">n!</string>
     <string name="r_fact">r!</string>
-    <string name="n_perm_r">nPr</string>
-    <string name="n_comb_r">nCr</string>
+    <string name="n_perm_r"><sub><small>n</small></sub>P<sub><small>r</small></sub></string>
+    <string name="n_comb_r"><sub><small>n</small></sub>C<sub><small>r</small></sub></string>
     <string name="indistinct_perm">Indistinguishable\nPermutations</string>
     <string name="request_list_name">What would you like to name the list?</string>
     <string name="save">Save</string>
